# Axum-Ecom-backend

./: Cargo.toml  Dockerfile  docker-compose.yml  folder-structure.ps1  prometheus.yml
src/: bootstrap.rs  main.rs  state.rs
src/config/: db.rs
src/core/: state.rs
src/core/errors/: errors.rs
src/domain/: README.md
src/domain/cart/: cart.rs
src/domain/category/: category.rs
src/domain/inventory/: inventory.rs
src/domain/orders/: order.rs
src/domain/payment/: payment.rs
src/domain/products/: product.rs
src/domain/review/: review.rs
src/domain/users/: user.rs
src/domain/wishlist/: wishlist.rs
src/infrastructure/: README.md
src/infrastructure/metrics/: mod.rs
src/infrastructure/mongo/: client.rs
src/modules/: README.md
src/modules/auth/: controller.rs  dto.rs  error.rs  mod.rs
src/modules/cart/: dto.rs
src/modules/category/: dto.rs
src/modules/inventory/: dto.rs
src/modules/orders/: dto.rs
src/modules/payment/: dto.rs
src/modules/users/: dto.rs
src/shared/: README.md
tests/products/: product_service_test.rs
